# vec

./: .gitmodules  CMakeLists.txt  README.md
include/: vec.cuh  vec.h  vec2.cuh  vec3.cuh
test/: CMakeLists.txt  test_runner.h  test_vec.cpp
test/test_files/: add_vec.cu  cross_3d_vec.cu  dot_vec.cu  equate_vec.cu  mag_vec.cu  norm_vec.cu  scale_vec.cu  sub_vec.cu
